setup client code base
