# docs/swagger.json
@@ -45,7 +45,7 @@
                 }
             }
         },
-        "/v1/add": {
+        "/v1/pastes/add": {
             "post": {
                 "description": "Create a new paste with the provided content and expiration date",
                 "consumes": [
@@ -91,7 +91,7 @@
                 }
             }
         },
-        "/{key}": {
+        "/v1/pastes/{key}": {
             "get": {
                 "description": "Retrieve content by its unique key",
                 "consumes": [
